<resources>
    <string name="app_name">Personas Social</string>
    <string name="gallery">Gallery</string>
    <string name="time_format_hmsMs">%02d:%02d:%02d:%02d</string>
    <string name="time_format_hms">%02d:%02d:%02d</string>
    <string name="time_format_ms">%02d:%02d</string>
    <string name="msg_video_not_proper">This video is not proper, please select another video.</string>
    <string name="selected_videos">Selected Videos</string>
    <string name="next">Next</string>
    <string name="time0">00.00</string>
    <string name="edit_content">Edit Content</string>
    <string name="discard_video">Discard Video</string>
    <string name="are_you_sure_you_want_to_discard_this_video">Are you sure you want to discard this video?</string>
    <string name="no">No</string>
    <string name="text">Text</string>
    <string name="track">Track</string>
    <string name="effects">Effects</string>
    <string name="record">Record</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="duplicate">Duplicate</string>
    <string name="music">Music</string>
    <string name="trim">Trim</string>
    <string name="filter">Filter</string>
    <string name="volume">Volume</string>
    <string name="export_video">Export Video</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="save_to_post">Save to Post</string>
    <string name="msg_enable_permission">Please enable %s permission from settings to access %s</string>
    <string name="storage">Storage</string>
    <string name="library">Library</string>
    <string name="previous">Previous</string>
    <string name="msg_save_changes">Please save change first.</string>
    <string name="msg_finish_editing">Are you sure you want to finish editing?</string>
    <string name="msg_video_time_limit_exceed">Please resize the video, you have exceeded the maximum 10 minute duration of video.</string>
    <string name="exporting_video">Exporting a video</string>
    <string name="msg_sharing_text">This is some text that I want to share.</string>
    <string name="msg_export_alert">Are you sure you want to cancel video exporting?</string>
    <string name="no_video_found">No Video Found</string>
    <string name="color">Color</string>
    <string name="gradient">Gradient</string>
    <string name="pattern">Pattern</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="basic">Basic</string>
    <string name="loop">Loop</string>
    <string name="border">Border</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="gradient_invert">Gradient Invert</string>
    <string name="invert">Invert</string>
    <string name="double_tap_to_edit">Double Tap To Edit</string>
    <string name="enter_the_text">Double Tap To Edit</string>
    <string name="video_length_finish">video length finish</string>
    <string name="you_can_only_copy_5_item">You can only copy 5 item!!</string>
    <string name="please_select_text_first">please select text first</string>
    <string name="you_can_not_add_more_than_5_text">You can not add more than 5 text !!</string>
    <string name="on_device">On Device</string>
    <string name="popular">Popular</string>
    <string name="games">Games</string>
    <string name="bells">Bells</string>
    <string name="guitar">Guitar</string>
    <string name="drum">Drum</string>
    <string name="applause">Applause</string>
    <string name="birds">Birds</string>
    <string name="insects">Insects</string>
    <string name="animal">Animals</string>
    <string name="laugh">Laughs</string>
    <string name="heartbeats">Heartbeats</string>
    <string name="footsteps">Footsteps</string>
    <string name="msg_audio_saved">Your recording is saved.</string>
    <string name="txt_ok">OK</string>
    <string name="record_audio">Record Audio</string>
    <string name="msg_start_recording">Please start recording first to save</string>
    <string name="msg_chnages_revert">If you have done some changes and go back without save then all your changes will be revert. Are you sure want go back?</string>
    <string name="yes">Yes</string>
    <string name="you_can_undo_only_2_item">You can undo only 2 item</string>
    <string name="you_can_redo_only_2_item">You can redo only 2 item</string>
    <string name="msg_wave_form">Could not load wave forms of selected music file.</string>
    <string name="msg_remove_music">Are you sure you want to remove music?</string>


</resources>