<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_exportVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:visibility="invisible"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:text="@string/export_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_cancle"
        android:layout_width="@dimen/dimen_20dp"
        android:layout_height="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:src="@drawable/closeicon"
        android:layout_marginEnd="@dimen/dimen_15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_SavetoGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_16sp"
        android:text="@string/save_to_gallery"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:padding="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:background="@drawable/bg_react"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_exportVideo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_SavetoPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_16sp"
        android:text="@string/save_to_post"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:padding="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_15dp"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:background="@drawable/bg_react"
        app:layout_constraintTop_toBottomOf="@+id/tv_SavetoGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>