<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="videoEdit"
            type="com.app.personas_social.activity.VideoEditorActivity" />

        <variable
            name="type"
            type="androidx.databinding.ObservableInt" />

        <import type="android.view.View" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
   android:id="@+id/cc_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_5dp"
   >


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnColor"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_4dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:textColor="@{type == 1?@color/white:@color/black}"
        android:background="@{type == 1?@drawable/bg_pink_gradiant:@drawable/bg_white_border}"
        android:onClick="onClickViewEditScreen"
        android:padding="@dimen/dimen_2dp"
        android:text="@string/color"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/btnGradiant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGradiant"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:textColor="@{type == 2?@color/white:@color/black}"
        android:background="@{type == 2?@drawable/bg_pink_gradiant:@drawable/bg_white_border}"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:onClick="onClickViewEditScreen"
        android:padding="@dimen/dimen_2dp"
        android:text="@string/gradient"
        android:textSize="@dimen/dimen_12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/btnPattern"
        app:layout_constraintStart_toEndOf="@+id/btnColor"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPattern"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_marginStart="@dimen/dimen_4dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:textColor="@{type == 3?@color/white:@color/black}"
        android:background="@{type == 3?@drawable/bg_pink_gradiant:@drawable/bg_white_border}"
         android:padding="@dimen/dimen_2dp"
        android:text="@string/pattern"
        android:textSize="@dimen/dimen_12sp"
        android:onClick="onClickViewEditScreen"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGradiant"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_15sp"
        android:visibility="@{type == 1?View.VISIBLE:View.GONE}"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnColor"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:clipToPadding="false"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="@{type == 2?View.VISIBLE:View.GONE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnColor"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:visibility="@{type == 3?View.VISIBLE:View.GONE}"
        android:layout_marginBottom="@dimen/dimen_20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnColor" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInvert"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:clipToPadding="false"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:visibility="gone"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/btnColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lightblack"
        android:text="@string/gradient_invert"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_16sp"
        android:visibility="@{type == 2?View.VISIBLE:View.GONE}"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/rvGradient"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnInvert"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_30dp"
        android:textColor="@color/white"
        android:text="@string/invert"
        android:paddingLeft="@dimen/dimen_10dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:gravity="center"
        android:onClick="onClickViewEditScreen"
        android:layout_marginBottom="@dimen/dimen_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/gradient_reactangle_red"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_16sp"
        android:visibility="@{type == 2?View.VISIBLE:View.GONE}"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGradient"/>


      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvBorder"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/lightblack"
          android:text="@string/border"
          android:layout_marginStart="@dimen/dimen_10dp"
          android:textSize="@dimen/dimen_16sp"
          android:visibility="@{type == 1?View.VISIBLE:View.GONE}"
          android:fontFamily="@font/roboto_medium"
          android:layout_marginTop="@dimen/dimen_10dp"
          app:layout_constraintTop_toBottomOf="@+id/rvColor"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvborder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:clipToPadding="false"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="@{type == 1?View.VISIBLE:View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBorder"/>



</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>