<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>


        <variable
            name="viewModel"
            type="com.app.personas_social.viewmodel.VideoListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        tools:context="com.app.personas_social.activity.VideoListActivity">

        <include
            android:id="@+id/includeToolbar"
            layout="@layout/app_toolbar"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLine"
            android:layout_width="@dimen/dimen_10dp"
            android:layout_height="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="@id/includeToolbar"
            app:layout_constraintStart_toStartOf="@id/includeToolbar"
            app:layout_constraintTop_toBottomOf="@id/includeToolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVideoGallery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            app:adapter="@{viewModel.videoLibraryAdapter}"
            app:itemSpanCount="@{2}"
            app:itemSpacingValue="@{@dimen/dimen_1dp}"
            app:includeEdges="@{false}"
            viewVisibility="@{!viewModel.mIsDisplayFolder}"
            tools:listitem="@layout/layout_video_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLine"
            tools:itemCount="10"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoDataFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_14dp"
            android:text="@string/no_video_found"
            android:gravity="center"
            viewVisibility="@{viewModel.mIsDisplayFolder}"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cc_BottmSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@drawable/dialog_bg"
            android:paddingLeft="@dimen/dimen_5dp"
            android:paddingRight="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_20dp"
            android:focusable="true">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_selectVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/selected_videos"
                android:layout_marginStart="@dimen/dimen_5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_selectSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:text="@{viewModel.selectedItemSize}"
                app:layout_constraintStart_toEndOf="@+id/tv_selectVideo"
                app:layout_constraintTop_toTopOf="parent"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_16sp"
                android:textColor="@color/pink"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/next"
                android:onClick="slectedItem"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_selectVideo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_20dp"
                tools:listitem="@layout/layout_select_video"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_next" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
